kubernetes/mini/apps/games/minecraft/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: playit
      toPorts:
        - ports:
            - port: "32420"
              protocol: ANY
  egress:
    - toFQDNs:
        - matchName: meta.fabricmc.net
        - matchName: modrinth.com
        - matchName: cdn.modrinth.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
